force-app/main/default/objects/SubscriptionProgram__c/SubscriptionProgram__c.object-meta.xml
<CustomObject>
    <label>訂閱方案</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>訂閱方案名稱</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>