force-app/main/default/objects/SubscriptionProgram__c/fields/Order_Period__c.field-meta.xml
<CustomField>
    <fullName>Order_Period__c</fullName>
    <label>期數</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>