force-app/main/default/objects/SubscriptionProgram__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>價格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>