force-app/main/default/objects/SubscriptionProgram__c/fields/ProgramId__c.field-meta.xml
<CustomField>
    <fullName>ProgramId__c</fullName>
    <label>方案代號</label>
    <length>20</length>
    <type>Text</type>
</CustomField>