force-app/main/default/objects/SubscriptionProgram__c/fields/ProgramName__c.field-meta.xml
<CustomField>
    <fullName>ProgramName__c</fullName>
    <label>方案名稱</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>